Fix: navbar overflow mobile

--- a/src/assets/sass/components/_navbar.scss
+++ b/src/assets/sass/components/_navbar.scss
@@ -10,8 +10,7 @@
 
 .navbar {
     width: 100%;
-    height: 80px;
-    // padding: 2% 2% 1%;
+    height: auto;
     background-color: #F09D06;
     display: flex;
     justify-content: space-between;
@@ -19,17 +18,16 @@
     position: fixed;
     top: 0;
     z-index: 9999;
+    overflow: hidden;
+    padding: 10px 15px;
+    left: 0;
+    box-sizing: border-box;
 
     .logo {
         color: #FFF3F4;
         padding: 0;
         text-align: center;
         height: 60px;
-    }
-
-    ul {
-        margin-bottom: 4%;
-        margin-top: 4%;
     }
 
     .links {
@@ -39,6 +37,8 @@
         cursor: pointer;
         align-items: center;
         text-align: center;
+        margin: 0;
+        padding: 0;
 
         li {
             margin: 15px;
@@ -55,7 +55,7 @@
         position: relative;
         transition: 0.5s all ease-in-out;
         padding: 0;
-
+        height: 80px;
         .logo {
             margin-top: -2%;
             padding: 0;
@@ -76,6 +76,7 @@
                 justify-content: center;
                 align-items: center;
                 opacity: 1;
+                padding: 0;
 
                 li {
                     margin: 15px 0;
@@ -87,6 +88,7 @@
         .logo {
             position: absolute;
             left: 20px;
+            top: 15px;
         }
 
         .toggle-icon {
